# SIDC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ingestion/: loader.py
